Done listTasks (temporary), saveData (write file), and remove tasks.json

--- a/data/tasks.json
+++ b/data/tasks.json
@@ -1,34 +1,47 @@
 [
-	{
-		"name": "exercise",
-		"dueDate": "2023-10-25",
-		"createdAt": "2023-09-30",
-		"updatedAt": "2023-10-01",
-		"status": "IN_PROGRESS",
-		"category": "personal"
-	},
-	{
-		"name": "read",
-		"dueDate": "2023-10-26",
-		"createdAt": "2023-09-28",
-		"updatedAt": "2023-10-03",
-		"status": "TODO",
-		"category": "personal"
-	},
-	{
-		"name": "meeting",
-		"dueDate": "2023-10-27",
-		"createdAt": "2023-09-18",
-		"updatedAt": "2023-10-23",
-		"status": "DONE",
-		"category": "work"
-	},
-	{
-		"name": "report",
-		"dueDate": "2023-10-28",
-		"createdAt": "2023-09-04",
-		"updatedAt": "2023-10-11",
-		"status": "TODO",
-		"category": "work"
-	}
+  {
+    "name": "exercise",
+    "category": "personal",
+    "dueDate": "2025-07-08 00:00:00",
+    "status": "TODO",
+    "createdAt": "2025-05-10 22:27:12",
+    "updatedAt": "2025-05-10 23:29:25"
+  },
+  {
+    "name": "read",
+    "category": "personal",
+    "status": "TODO",
+    "createdAt": "2025-05-10 23:29:25",
+    "updatedAt": "2025-05-10 23:29:25"
+  },
+  {
+    "name": "clean",
+    "category": "personal",
+    "dueDate": "2025-06-09 00:00:00",
+    "status": "TODO",
+    "createdAt": "2025-05-10 23:29:25",
+    "updatedAt": "2025-05-10 23:29:25"
+  },
+  {
+    "name": "meeting",
+    "category": "work",
+    "status": "TODO",
+    "createdAt": "2025-05-10 23:29:25",
+    "updatedAt": "2025-05-10 23:29:25"
+  },
+  {
+    "name": "report",
+    "category": "work",
+    "dueDate": "2025-06-04 00:00:00",
+    "status": "TODO",
+    "createdAt": "2025-05-08 18:10:27",
+    "updatedAt": "2025-05-10 22:29:25"
+  },
+  {
+    "name": "t_test",
+    "category": "test",
+    "status": "TODO",
+    "createdAt": "2025-05-09 07:44:52",
+    "updatedAt": "2025-05-10 21:34:12"
+  }
 ]
